On the road to 2025.04:
- kernel 6.14.x
- grub 2.12.r260.gaae2ea61-1
testsuite:
- speedup hwsim routine
network:
- added wireless regulatory domain configuration
setup:
- added wireless regulatory domain copying
---
Highlights 2025.03:
- added automatic installation archboot-autorun.template support
- added Netboot - IPXE support for aarch64 and x86_64
- added IRC Support Channel: #archboot on irc.libera.chat
Environment:
- cleanup pacman config and options
- added tiny package as preconfigured IRC client
- 3cpio 0.4.0
- added iptables-nft as default iptables
- added nftables
- updated MOTD
common:
- added --disable-download-timeout option to pacman defaults
cpio.sh:
- removed softdeps checks
- implemented cleaner array handling
- added file error check
- fixed binary error check
- added more robust library detection
- speedup library function
- speedup kernel module function
bootloader:
- added check on successful container creation
localize:
- added write to template file
network:
- added write to template file
clock:
- added write to template file
pacsetup:
- added write to template file
setup:
- added write to template file
- added unmount everything before cleaning disk
- fixed directory creation before UKI writing
- added check on running swaps
- fixed raid0 / linear setup
- fixed /boot detection
---
Highlights 2025.02:
- On normal image reduced needed RAM by 30%,
  to boot from 900M for VMs down to 600M!
- On latest image reduced needed RAM by 10%
  to boot from 2300M down to 2100M!
- maximized boot speed!
- kernel 6.13.x
- grub 2:2.12.r212.g4dc616657-2
Environment:
- cleaned up firmware
- cleaned up network, sata and wireless modules
- removed broadcom-wl module
ISO images:
- splitted firmware into separate initramfs files
- added doc directory to ISO base directories
- added Joliet filesystem for correct filenames on Windows
- added Release.txt to ISO base directory
- removed license directory from ISO base directories
doc: