@@ -1,12 +1,15 @@
 On the road to 2025.04:
 - kernel 6.14.x
 - grub 2.12.r260.gaae2ea61-1
+Environmen:
+- disabled wifi powersave by default
 testsuite:
 - speedup hwsim routine
 network:
 - added wireless regulatory domain configuration
 setup:
 - added wireless regulatory domain copying
+- added wifi powersave disable by default
 ---
 Highlights 2025.03:
 - added automatic installation archboot-autorun.template support
